--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -8,7 +8,7 @@ contact_links:
     about: Our Discord Community could maybe help you out via live-chat
   - name: GitHub Community Support
     url: https://github.com/orgs/community/discussions
-    about: Please ask and answer questions here.
+    about: Please ask and answer questions regarding the GitHub Platform here.
   - name: GitHub Security Bug Bounty
     url: https://bounty.github.com/
-    about: Please report security vulnerabilities here.
+    about: Please report security vulnerabilities of the GitHub Platform here.
