--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -31,6 +31,17 @@ body:
       value: __Describe your environment__
 
   - type: dropdown
+    id: os_dropdown
+    attributes:
+      label: OS
+      description: Which operating System did you use when the bug occured
+      multiple: false
+      options:
+        - 'Linux'
+        - 'Windows'
+        - 'macOS'
+
+  - type: dropdown
     id: gpu_dropdown
     attributes:
       label: GPU
@@ -49,27 +60,27 @@ body:
       description: Size of the VRAM if known
       placeholder: 8GB
 
-  - type: dropdown
-    id: os_dropdown
-    attributes:
-      label: OS
-      description: Which operating System did you use when the bug occured
-      multiple: false
-      options:
-        - 'Linux'
-        - 'Windows'
-        - 'macOS'
-
   - type: textarea
     id: what-happened
     attributes:
       label: What happened?
       description: |
         Briefly describe what happened, what you expected to happen and how to reproduce this bug.
-        Also add Screenshots to help describe your problem if applicable or any other additional content
       placeholder: When using the webinterface and right-clicking on button X instead of the popup-menu there error Y appears
     validations:
       required: true
+
+  - type: textarea
+    attributes:
+      label: Screenshots
+      description: If applicable, add screenshots to help explain your problem
+      placeholder: this is what the result looked like <screenshot>
+
+  - type: textarea
+    attributes:
+      label: Additional context
+      description: Add any other context about the problem here
+      placeholder: Only happens when there is full moon and Friday the 13th on Christmas Eve 🎅🏻
 
   - type: input
     id: contact
