--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -40,6 +40,8 @@ body:
         - 'Linux'
         - 'Windows'
         - 'macOS'
+    validations:
+      required: true
 
   - type: dropdown
     id: gpu_dropdown
@@ -52,6 +54,8 @@ body:
         - 'amd'
         - 'mps'
         - 'cpu'
+    validations:
+      required: true
 
   - type: input
     id: vram
@@ -59,6 +63,8 @@ body:
       label: VRAM
       description: Size of the VRAM if known
       placeholder: 8GB
+    validations:
+      required: false
 
   - type: textarea
     id: what-happened
@@ -75,12 +81,16 @@ body:
       label: Screenshots
       description: If applicable, add screenshots to help explain your problem
       placeholder: this is what the result looked like <screenshot>
+    validations:
+      required: false
 
   - type: textarea
     attributes:
       label: Additional context
       description: Add any other context about the problem here
       placeholder: Only happens when there is full moon and Friday the 13th on Christmas Eve 🎅🏻
+    validations:
+      required: false
 
   - type: input
     id: contact
